<resources>
    <string name="app_name">Jeeves</string>
    <string name="text_home">Home</string>
    <string name="text_class">Class</string>
    <string name="text_notificationVolume">Notification Volume</string>
    <string name="text_mediaVolume">Media Volume</string>
    <string name="text_ringtoneVolume">Ringtone Volume</string>
    <string name="text_systemVolume">System Volume</string>
    <string name="text_alarmVolume">Alarm Volume</string>
    <string name="text_car">Car</string>
    <string name="text_idkYet">IDK Yet\n(Does nothing)</string>
    <string name="headphone_popup_title">Headset Detected\n\nFull volume or partial volume?</string>
    <string name="text_full">Full</string>
    <string name="text_partial">Partial</string>
    <string name="text_out">Out</string>
    <string name="text_work">Work\n(Does nothing)</string>
    <string name="text_welcomeToJeeves">Welcome to Jeeves</string>
    <string name="default_versionText">Version: idk</string>
    <string name="text_showAllRunningProcesses">Show All Running Processes</string>
    <string name="text_done">Done</string>
    <string name="text_sync">Sync</string>
    <string name="settings_isKeith">settings_isKeith</string>
    <string-array name="percentages">
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>
    <string-array name="fonts">
        <item>Arial</item>
        <item>Calibri</item>
        <item>Tahoma</item>
        <item>Comic Sans (don\'t)</item>
        <item>Times New Roman</item>
        <item>Lighthouse</item>
        <item>Roboto</item>
        <item>Roboto Thin</item>
        <item>Code</item>
        <item>Star Jedi</item>
        <item>Product Sans</item>
    </string-array>
    <string name="title_activity_lock_screen">Lock Screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_unlock">Unlock</string>
    <string name="text_lockScreen">Lock Screen</string>
    <string name="text_jeeves">Jeeves</string>
    <string name="volume_setToFull">vol.settofull</string>
    <string name="text_dontChange">Don\'t Change</string>
    <string name="text_off">Off</string>
    <string name="text_on">On</string>
    <string name="settings_a_wifiAction">settings_home_wifiAction</string>
    <string name="settings_b_wifiAction">settings_class_wifiAction</string>
    <string name="settings_c_wifiAction">settings_out_wifiAction</string>
    <string name="settings_d_wifiAction">settings_d_wifiAction</string>
    <string name="settings_a_bluetoothAction">settings_home_bluetoothAction</string>
    <string name="settings_b_bluetoothAction">settings_class_bluetoothAction</string>
    <string name="settings_d_bluetoothAction">settings_d_bluetoothAction</string>
    <string name="settings_c_bluetoothAction">settings_out_bluetoothAction</string>
    <string name="text_showBCV">Show Big Content View</string>
    <string name="settings_showBigContentView">settings_showBigContentView</string>
    <string name="text_showScreenSize">Show Screen Size</string>
    <string name="text_showNotification">Show Notification</string>
    <string name="settings_showNotification">settings.showNotification</string>
    <string name="text_showHeadphonesPopup">Show Headphones popup</string>
    <string name="text_reboot">Reboot</string>
    <string name="text_notificationListener">Notification Listener</string>
    <string name="text_showLog">Show Log</string>
    <string name="text_clearLog">Clear Log</string>
    <string name="desc_notification_BButton">Class Button</string>
    <string name="desc_notification_AButton">Home Button</string>
    <string name="desc_notification_CButton">Out Button</string>
    <string name="text_addAdderall">Add One Adderall</string>
    <string name="text_search">Search</string>
    <string name="text_log">"Log    "</string>
    <string name="adderallPopup_lastTaken">"Last taken "</string>
    <string name="text_add">Add</string>
    <string name="text_add10">+10</string>
    <string name="text_add20">+20</string>
    <string name="text_add5">+5</string>
    <string name="text_clear">Clear</string>
    <string name="text_minutesAgo">" minutes ago "</string>
    <string name="text_hoursAnd">" hours and "</string>
    <string name="text_soFarToday">So far today:</string>
    <string name="text_Adderall">Adderall</string>
    <string name="text_idk">idk</string>
    <string name="text_eithApps">eithApps</string>
    <string name="text_showSystemInfo">Show System Info</string>
    <string name="text_notificationPriority">Notification Priority</string>
    <string name="text_low">Low</string>
    <string name="text_default">Default</string>
    <string name="text_high">High</string>
    <string name="text_max">Max</string>
    <string name="text_min">Min</string>
    <string name="text_jeevesImage">Jeeves Image</string>
    <string name="text_keithappsImage">KeithApps Image</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_buttonD">Button D</string>
    <string name="text_resetAtMidnight">Reset Adderall at Midnight</string>
    <string name="text_showRickAndMortyPopups">Show Painfully Intrusive Popups</string>
    <string name="text_8">8</string>
    <string name="text_screamingSun">Screaming Sun</string>
    <string name="text_cromulon">Cromulon</string>
    <string name="text_testEmail">Test Email</string>
    <string name="text_body">Body:</string>
    <string name="text_title">Title:</string>
    <string name="text_feedback_pageHeader">Send a Feedback email to the developer at KeithApps!</string>
    <string name="text_testException">Test Exception</string>
    <string name="text_sendFeedback">Send Feedback</string>
    <string name="text_modes">Modes</string>
    <string name="text_features">Features</string>
    <string name="text_testKeithToast">Test Keith Toast</string>
    <string name="frequency">Frequency:</string>
    <string name="frequency_description">Higher value means \nlower frequency\nMax: 999 Min: 0</string>
    <string name="headphonePopup">Headphone Popup</string>
    <string name="permissions">Permissions</string>
    <string name="text_permissionsForewarning">"Technically, permissions can only be \"turned off\" in Marshmallow, so Jeeves may still have access, but will no longer use anything associated with those permissions.\n\n"</string>
    <string name="location">Location</string>
    <string name="permissions_location">permissions_location</string>
    <string name="resetAtMidnight">resetAtMidnight</string>
    <string name="internet">Internet</string>
    <string name="permissions_internet">permissions_internet</string>
    <string name="backgroundProcess">Background Process</string>
    <string name="permissions_background">permissions_background</string>
    <string name="accountInfo">Account Information</string>
    <string name="permissions_accounts">permissions_accounts</string>
    <string name="text_showLocationLog">Show Location Log</string>
    <string name="permissions_phoneNumber">permissions_phoneNumber</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="close">Close</string>
    <string name="show_adderall_log">Show Adderall Log</string>
    <string name="settings_logLocation">settings_logLocation</string>
    <string name="logLocation">Log Location</string>
    <string name="icon">Icon</string>
    <string name="modeA_icon">modeA_icon</string>
    <string name="modeC_icon">modeC_icon</string>
    <string name="modeB_icon">modeB_icon</string>
    <string name="modeD_icon">modeD_icon</string>
    <string name="fontCode">fontNumber</string>
    <string name="setting_logStuff">log.record</string>
    <string name="font">Font:</string>
    <string name="text_popup">Text Popup</string>
    <string name="force_location_update">Force Location Update</string>
    <string name="adderall_graph">Adderall Graph</string>
    <string name="graphViewCredit">Credit for the Graph View to Jonas Gehring\nhttp://www.android-graphview.org/</string>
    <string name="googleButton">Google Button</string>
    <string name="settings_showGoogleButton">settings_showGoogleButton</string>
    <string name="showGoogleButton">Show Floating \nGoogle Button</string>
    <string name="show">Show</string>
    <string name="jeeves_button">Jeeves Button</string>
    <string name="permissions_drawOverOtherApps">permissions_drawOverOtherApps</string>
    <string name="draw_over_other_apps">Draw Over Other Apps</string>
    <string name="jeevesMain">Jeeves Main</string>
    <string name="installed_from_play_store">Installed From Play Store</string>
    <string name="system_installed_app">System Installed App</string>
    <string name="manufacturer_installed_apps">Manufacturer Installed Apps</string>
    <string name="lock_media_volume_to_100">Lock Media Volume to 100%</string>
</resources>
