<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_foreColor"
    android:orientation="vertical"
    android:padding="@dimen/fifteen"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/permissions_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/twenty"
        android:text="@string/text_permissionsForewarning"
        android:textAlignment="center"
        android:textSize="@dimen/twelve" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <keithapps.mobile.com.jeeves.views.SettingsSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/permissions_switch_padding"
            app:setting="@string/permissions_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <keithapps.mobile.com.jeeves.views.SettingsSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/permissions_switch_padding"
            app:setting="@string/permissions_internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <keithapps.mobile.com.jeeves.views.SettingsSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/permissions_switch_padding"
            app:setting="@string/permissions_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backgroundProcess" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <keithapps.mobile.com.jeeves.views.SettingsSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/permissions_switch_padding"
            app:setting="@string/permissions_accounts" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountInfo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <keithapps.mobile.com.jeeves.views.SettingsSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/permissions_switch_padding"
            app:setting="@string/permissions_phoneNumber" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <keithapps.mobile.com.jeeves.views.SettingsSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/permissions_switch_padding"
            app:setting="@string/permissions_drawOverOtherApps" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_over_other_apps" />
    </LinearLayout>
</LinearLayout>