<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/developer_popup_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.popups.DeveloperPopup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minWidth="@dimen/two_hundred_fifty"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/twenty" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jeevesMain"
            android:text="@string/jeevesMain" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="screamingSun"
            android:text="@string/text_screamingSun" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cromulon"
            android:text="@string/text_cromulon" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testEmail"
            android:text="@string/text_testEmail" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testException"
            android:text="@string/text_testException" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="headphonesPopup"
            android:text="@string/headphonePopup" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="forceLocationUpdate"
            android:text="@string/force_location_update" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/testPopup_verticalSpace" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jeevesFloatingButton"
            android:text="@string/jeeves_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/twenty" />
    </LinearLayout>
</ScrollView>