<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="keithapps.mobile.com.jeeves.popups.TestPopup">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="screamingSun"
        android:text="@string/text_screamingSun" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cromulon"
        android:text="@string/text_cromulon" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testEmail"
        android:text="@string/text_testEmail" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testException"
        android:text="@string/text_testExeption" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testKeithToast"
        android:text="@string/text_testKeithToast" />
</LinearLayout>