<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notification_button_background"
    android:orientation="vertical"
    android:padding="@dimen/fifteen"
    android:theme="@style/AppTheme"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/twenty"
        android:text="@string/text_feedback_pageHeader" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/feedback_titleText"
        android:text="@string/text_title" />

    <EditText
        android:id="@+id/feedback_titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage|textCapWords" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty" />

    <TextView
        android:id="@+id/feedback_bodyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/feedback_bodyText"
        android:text="@string/text_body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/feedback_bodyText"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:inputType="textMultiLine" />

        <ImageView
            android:id="@+id/sendFeedback_sendButton"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/text_sendFeedback"
            android:paddingEnd="@dimen/zero"
            android:paddingStart="@dimen/ten"
            android:src="@drawable/send" />
    </LinearLayout>
</LinearLayout>