<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125sp"
    android:background="@drawable/notification_background"
    android:orientation="vertical"
    android:padding="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notification_big_image"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:src="@drawable/icon" />

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/notification_big_button1"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/notification_button_background"
            android:text="@string/text_home"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/notification_big_button2"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/notification_button_background"
            android:text="@string/text_class"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/notification_big_button3"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/notification_button_background"
            android:text="@string/text_out"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/notification_big_settings"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/overflow" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/notification_big_button4"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/notification_button_background"
            android:text="@string/text_car"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/notification_big_button5"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/notification_button_background"
            android:text="@string/text_work"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/notification_big_button6"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/notification_button_background"
            android:text="@string/text_idkYet"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />
    </LinearLayout>
</LinearLayout>