<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_processview"
    android:orientation="horizontal"
    android:padding="15sp">

    <TextView
        android:id="@+id/modeChangeView_textBoxTEXT"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingEnd="20sp"
        android:paddingStart="0sp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_textSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/modeChangeView_textBoxOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_off"
            android:textColor="@android:color/white"
            android:textSize="@dimen/mcv_textSmall" />

        <RadioButton
            android:id="@+id/modeChangeView_radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="15sp"
        android:paddingStart="15sp">

        <TextView
            android:id="@+id/modeChangeView_textBoxLEAVE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dontChange"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/mcv_textSmall" />

        <RadioButton
            android:id="@+id/modeChangeView_radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/modeChangeView_textBoxON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_on"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/mcv_textSmall" />

        <RadioButton
            android:id="@+id/modeChangeView_radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>